# valkka-nv

./: .gitignore  CMakeLists.txt  README.md  prepare_build.bash  setver.bash  use_build.bash
debian/: control  rules
docs/: config
ext/: download_nvidia.bash  fix_nvidia.bash
ext/demo/: README.md  clean.bash  compile.bash  demo.cpp  demo.h
include/: makeswig.bash  module.i  module.i.base  nvdecoder.h  nvthread.h  semaring.h  valkkanv_common.h
python/: quicktest.py  videotest.py
python/valkka/: README.md
python/valkka/nv/: __init__.py  valkka_nv.py  valkka_nv_wrap.cpp  version.py
src/: nvdecoder.cpp  nvthread.cpp  semaring.cpp
test/: dectest.cpp  mytest.cpp
